# cusco-urban-transit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_log.txt
.github/workflows/: ci.yml  codeql.yml  release.yml
build_temp/: compile_full.txt  temp_hello.cpp
cmake/modules/: FindSQLite3.cmake  ProjectConfig.cmake
data/: schema.sql
data/seed/: routes_seed.sql  stops_seed.sql
include/core/: algorithms.h  graph.h
include/infra/: connection_pool.h  db.h  logger.h  sqlite_wrapper.h
include/transport/: route_service.h  stop_service.h  transport.h  trip_service.h
scripts/: build.sh  check_db.py  init_db.py  init_db.sh  populate_db.sh  run_tests.sh  setup_and_build.ps1
src/: main.cpp
src/app/: algorithms.cpp  transport.cpp
src/app/services/: route_service.cpp  stop_service.cpp  trip_service.cpp
src/core/: graph.cpp
src/infra/: db.cpp
src/infra/logging/: logger.cpp
src/infra/sqlite/: connection_pool.cpp  sqlite_wrapper.cpp
tests/: test_algorithms.cpp  test_routes.cpp  test_stops.cpp
